// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Aggregates correctly 1`] = `
"# Changelog

## [v2.0.0] - <date>
### to
- Test function

## [v1.0.0]
- Old release"
`;

exports[`Can group change logs by type 1`] = `
"# Changelog

## [v2.0.0] - <date>
### Fixes
- Something
- Something else


### Features
- New feature 1
"
`;

exports[`Can handle multiple levels of lists 1`] = `
"# Changelog

### [v0.2.0]
- A change
  - Nested
    - Nested 2

### [v0.1.0]
- A change"
`;

exports[`Can parse already parsed doc 1`] = `
"# Changelog

## [1.0.0]
### Fixes
- Something
- Something else


### Features
- New feature 1
"
`;

exports[`Can process multiple versions 1`] = `
"# Changelog

### [v0.2.0]
- A change

### [v0.1.0]
- A change"
`;

exports[`Can start with multiple text blocks 1`] = `
"# Changelog

## [v2.0.0] - <date>

GPT ads are now lazy-loaded by default.
Changed props:

\`<GptAdSlot>\`
- \`disabled\`: Set to asdasdasdsad....

Info

SlotDefinition at \`<GptAdProvider>\` level

- \`disableLazyLoading\`: Always load this slot independently of its viewport position

Bit ol multiline

description
"
`;

exports[`Does not add release when no vnext entry and existing entires exist 1`] = `
"# Changelog

### [v0.1.0]
- A change"
`;

exports[`Maintains blank lines 1`] = `
"# Changelog

### [v0.2.0]
- A change

- Another change


### [v0.1.0]
- A change"
`;

exports[`Supports different leveled headings with issues 1`] = `
"## Changelog

### [v1.0.0] - <date>
- A change"
`;

exports[`Supports different leveled headings with issues 2 1`] = `
"# Changelog

### [v1.0.0] - <date>
- A change"
`;

exports[`Supports having a changelog description 1`] = `
"# Changelog

This is a changelog

## [v1.0.0]
No changes
"
`;

exports[`Supports having a empty vNext version 1`] = `
"# Changelog

## [v1.0.0] - <date>
No changes
"
`;

exports[`Supports just a top level title 1`] = `
"# Changelog

## [v1.0.0]
No changes
"
`;

exports[`Supports vnext with issues 1`] = `
"# Changelog

## [v1.0.0] - <date>
- A change"
`;
